...
"select_transfer_method_country" = "Select Country";
"select_transfer_method_currency" = "Select Currency";
"remove_button_label" = "Remove";
"cancel_button_label" = "Cancel";
"ok_button_label" = "OK";
"try_again_button_label" = "Try Again";
"done_button_label" = "Done";
"search_placeholder_label" = "Search";
"add_transfer_method_fee_label" = "Transaction Fees: ";
"add_transfer_method_processing_time_label" = "Processing Time: ";
"unexpected_error_message" = "Oops... Something went wrong, please try again";
"network_connection_error_title" = "Connectivity Issue";
"unexpected_title" = "Unexpected Error";
"network_connection_error_message" = "We are encountering a problem processing the request. Please check your connectivity.";
"transfer_method_list_item_description" = "Ending on ";
"no_country_available_error_message" = "There is no country available";
"no_transfer_method_available_error_message" = "There is no transfer method available for %1$@ and %2$@";
"no_currency_available_error_message" = "There is no currency available for country %1$@";
"empty_list_transfer_method_message" = "You didn’t add an account yet. Once created, it will show up here!";
...
"receipt_details_amount" = "Amount:";
"receipt_details_fee" = "Fee:";
"receipt_details_receipt_id" = "Receipt ID:";
"receipt_details_date" = "Date:";

// Transfer Funds
"transfer_funds" = "Transfer Funds";
"add_transfer_section_header_destination" = "DESTINATION";
"add_transfer_section_header_transfer" = "TRANSFER";
"add_transfer_section_header_notes" = "NOTES";
"transfer_amount" = "Amount";
"transfer_all_funds" = "Transfer all funds";
"available_balance_footer" = "Available for transfer: %1$@";
...
