...
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProcessingView" customModule="HyperwalletExampleApp" customModuleProvider="target">
            <connections>
                <outlet property="activityIndicator" destination="7i8-p4-1vF" id="GT6-Pg-U43"/>
                <outlet property="checkImageView" destination="B30-6p-Vx2" id="wo8-zE-AtV"/>
                <outlet property="contentView" destination="iN0-l3-epB" id="pBp-rJ-ibu"/>
                <outlet property="stateLabel" destination="JD4-rn-j3U" id="oU1-qB-t0A"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
...
