import XCTest

class TransferUserFundsTest: BaseTests {
    var transferFundMenu: XCUIElement!
    var transferFundSourceMenu: XCUIElement!
    var transferFunds: TransferFunds!
    var selectDestination: TransferFundsSelectDestination!
    var addTransferMethod: AddTransferMethod!
    var elementQuery: XCUIElementQuery!
    let listppcUrl = "/rest/v3/users/usr-token/prepaid-cards"
    let ppcInfoUrl = "/rest/v3/users/usr-token/prepaid-cards/trm-token"

    var expectedUSDestinationPrepaidLabel: String = {
        if #available(iOS 11.2, *) {
            return "USD\nVisa •••• "
        } else {
            return "USD Visa •••• "
        }
    }()

    var expectedUSDestinationLabel: String = {
        if #available(iOS 11.2, *) {
            return "United States\nending in "
        } else {
            return "United States ending in "
        }
    }()

    var expectedCanadaDestinationLabel: String = {
        if #available(iOS 11.2, *) {
            return "Canada\nending in 1235"
        } else {
            return "Canada ending in 1235"
        }
    }()

    var expectedJapanDestinationLabel: String = {
        if #available(iOS 11.2, *) {
            return "Japan\nending in 1200"
        } else {
            return "Japan ending in 1200"
        }
    }()

    override func setUp() {
        super.setUp()
        app = XCUIApplication()
        app.launchArguments.append("enable-testing")
        app.launch()

        spinner = app.activityIndicators["activityIndicator"]
        transferFundMenu = app.tables.cells
            .containing(.staticText, identifier: "Transfer Funds")
            .element(boundBy: 0)

        transferFundSourceMenu = app.tables.cells
            .containing(.staticText, identifier: "Transfer Funds Source")
            .element(boundBy: 0)

        transferFunds = TransferFunds(app: app)
        selectDestination = TransferFundsSelectDestination(app: app)
        addTransferMethod = AddTransferMethod(app: app)
        if #available(iOS 13.0, *) {
            elementQuery = app.tables["scheduleTransferTableView"].buttons
        } else {
            elementQuery = app.tables["scheduleTransferTableView"].staticTexts
        }

        mockServer.setupStub(url: "/rest/v3/users/usr-token/balances",
                             filename: "ListBalancesResponseSuccess",
                             method: HTTPMethod.get)
    }

    /*
     Given that no Transfer methods have been created
     When module is loaded
     Then the user will have the ability to create a method
     */
    func testTransferFunds_noTransferMethod() {
        mockServer.setUpEmptyResponse(url: "/rest/v3/users/usr-token/transfer-methods")

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        transferFunds.verifyTransferFundsTitle()

        // TRANSFER FROM
        transferFunds.verifyTransferFrom(isAvailableFunds: true)

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)
        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "mobileAddTransferMethod".localized())

        // assert NOTE
        XCTAssertTrue(transferFunds.notesSectionLabel.exists)

        // assert Continue button
        XCTAssertTrue(transferFunds.nextLabel.exists)
    }

    func testTransferFunds_userBalanceError() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        mockServer.setupStubError(url: "/rest/v3/users/usr-token/balances",
                                  filename: "ListBalancesResponseSuccess",
                                  method: .get,
                                  statusCode: 500)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        transferFunds.verifyTransferFundsTitle()

        waitForExistence(app.alerts["Unexpected Error"])
        XCUIApplication()
            .alerts["Unexpected Error"]
            .scrollViews
            .otherElements
            .buttons["Done"]
            .tap()
        waitForNonExistence(spinner)
        XCTAssertTrue(transferFundMenu.exists)
    }

    /*
     Given that Transfer methods exist
     When module is loaded
     Then first available transfer method will be selected
     */
    func testTransferFunds_firstAvailableMethodIsSelected() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        transferFundMenu.tap()
        waitForNonExistence(spinner)

        transferFunds.verifyTransferFundsTitle()

        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
        // Transfer max funds
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

        // TRANSFER FROM
        XCTAssertEqual(transferFunds.transferSourceTitleLabel.label, "mobileAvailableFunds".localized())
        XCTAssertEqual(transferFunds.transferSourceSubtitleLabel.label, "CAD, EUR, USD")

        // TRANSFER TO
        XCTAssertTrue(transferFunds.transferSectionLabel.exists)
        // Add Destination Section
        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)
        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")

        transferFunds.verifyBankAccountDestination(type: "Bank Account", endingDigit: "1234")

        // Notes
        XCTAssertTrue(transferFunds.notesSectionLabel.exists)
        transferFunds.verifyNotes()

        // Next Button
        XCTAssertTrue(transferFunds.nextLabel.exists)
    }

    /*
     Given that Transfer methods exist
     When user select a different transfer method with different currency
     Then the destination currency should be updated AND Then Payee can enter the amount
     */
    func testTransferFunds_switchTransferMethodCurrency() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)
        transferFunds.verifyTransferFundsTitle()

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)

        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
        // Transfer max funds
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")
        transferFunds.addSelectDestinationLabel.tap()
        // Select Destination (CAD)
        mockServer.setupStub(url: "/rest/v3/transfers", filename: "AvailableFundCAD", method: HTTPMethod.post)
        let cadBankAccount = app.tables.element.children(matching: .cell).element(boundBy: 1)
        cadBankAccount.tap()

        waitForNonExistence(spinner)
        transferFunds.transferMaxAllFunds.tap()
        // Assert Destination Amount is automatically insert into the amount field
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "7,301.64")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "CAD")
    }

    /*
     Given that Transfer methods exist
     When user select a different transfer method with error occurs
     Then will not show the error
     And "Amount available: N/A" is shown
     And transfer max funds is not shown
     */
    func testTransferFunds_switchTransferMethodWithTransactionLimitError() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)
        transferFunds.verifyTransferFundsTitle()

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)

        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
        // Transfer max funds
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")
        transferFunds.addSelectDestinationLabel.tap()
        // Select Destination (CAD)

        mockServer.setupStubError(url: "/rest/v3/transfers",
                                  filename: "TransferBelowTransactionLimitError",
                                  method: HTTPMethod.post)

        let cadBankAccount = app.tables.element.children(matching: .cell).element(boundBy: 1)
        cadBankAccount.tap()

        waitForNonExistence(spinner)
        // Assert Available available: N/A
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       transferFunds.notAvailableFunds)

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)

        XCTAssertFalse(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should not exist")
    }

    /*
     Given that Transfer methods exist
     When navigate to the Transfer view and error occurs
     Then will not show the error
     And "Amount available: N/A" is shown
     And transfer max funds is not shown
     */
    func testTransferFunds_TransferMethodWithBelowTransactionLimitError() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStubError(url: "/rest/v3/transfers",
                                  filename: "TransferBelowTransactionLimitError",
                                  method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)
        transferFunds.verifyTransferFundsTitle()

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)

        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")

        // Assert Available available: N/A
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       transferFunds.notAvailableFunds)

        // Transfer max funds
        XCTAssertFalse(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should not exist")
    }

    func testTransferFunds_createTransferWithAllFunds() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
        // Transfer all funds row
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")
        // Tap on the Transfer max funds
        transferFunds.transferMaxAllFunds.tap()
        // Assert Destination Amount is automatically insert into the amount field
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "452.14")
    }

    /*
       Given that Transfer methods exist
       When user selects TransferAllFunds AND then remove the All Funds amount AND enter a different fund amount
       Then the transfer fund amount should show different fund amount.
       */
      func testTransferFunds_switchAllFundsToEnterFundsUSD() {
          mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                               filename: "ListMoreThanOneTransferMethod",
                               method: HTTPMethod.get)
          mockServer.setupStub(url: "/rest/v3/transfers", filename: "AvailableFundUSD", method: HTTPMethod.post)

          XCTAssertTrue(transferFundMenu.exists)
          transferFundMenu.tap()
          waitForNonExistence(spinner)

          XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
          XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
          XCTAssertEqual(transferFunds.transferAmountLabel.label,
                         String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
          // Transfer all funds row
          XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

          // Tap on the Transfer max funds
          transferFunds.transferMaxAllFunds.tap()
          // Assert Destination Amount is automatically insert into the amount field
          XCTAssertEqual(transferFunds.transferAmount.value as? String, "452.14")

          transferFunds.enterTransferAmount(amount: "999.99")
          XCTAssertEqual(transferFunds.transferAmount.value as? String, "999.99")

          // Tap on the Transfer max funds again
          transferFunds.transferAmountLabel.tap()
          transferFunds.transferMaxAllFunds.tap()

          checkSelectFieldValueIsEqualTo("452.14", transferFunds.transferAmount)
      }

    /* Given that User has 2 bank accounts which has different Currency from the Source.
     When user transfer the fund
     Then the user should see 2 FX quotes
     */
    // Transfer Requiring more than 2 FX
    func testTransferFunds_createTransferWithFX() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundMultiCurrencies",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        // Add Destination Section
        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)
        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")

        transferFunds.verifyBankAccountDestination(type: "Bank Account", endingDigit: "1234")

        // Transfer Section
        XCTAssertTrue(transferFunds.transferSectionLabel.exists)
        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "5,855.17", "USD"))
        // Transfer all funds row
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

        // Turn the Transfer All Switch On
        transferFunds.transferMaxAllFunds.tap()
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "5,855.17")

        // Next Button
        XCTAssertTrue(transferFunds.nextLabel.exists)
        transferFunds.tapContinueButton()

        // Assert Confirmation Page
        // waitForExistence(elementQuery["Confirm"])
    }

    func testTransferFunds_createTransferWithoutFX() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListOneBankAccountTransferUSD",
                             method: HTTPMethod.get)

        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        // Transfer Section
        XCTAssertTrue(transferFunds.transferSectionLabel.exists)
        // Amount row
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "0.00")
        XCTAssertEqual(transferFunds.transferCurrency.value as? String, "USD")
        XCTAssertEqual(transferFunds.transferAmountLabel.label,
                       String(format: "mobileAvailableBalance".localized(), "$", "452.14", "USD"))
        // Transfer all funds row
        XCTAssertTrue(transferFunds.transferMaxAllFunds.exists, "Transfer all funds switch should exist")

        // Add Destination Section
        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)
        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")

        transferFunds.verifyBankAccountDestination(type: "Bank Account", endingDigit: "6789")

        // Notes
        XCTAssertTrue(transferFunds.notesSectionLabel.exists)

        // Turn the Transfer max funds
        transferFunds.transferMaxAllFunds.tap()
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "452.14")

        // Next Button
        XCTAssertTrue(transferFunds.nextLabel.exists)
        transferFunds.tapContinueButton()

        // Assert Confirmation Page
        // waitForExistence(elementQuery["Confirm"])
    }

    /* Given that user is on the Transfer fund page and selected a Transfer Destination
     When user enter the digit for the transfer amount
     Then amount field will be formatted correctly
     */
    func testTransferFunds_createTransferWhenDestinationAmountIsSet() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListOneBankAccountTransferUSD",
                             method: HTTPMethod.get)
        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        XCTAssertTrue(transferFunds.addSelectDestinationSectionLabel.exists)
        XCTAssertEqual(transferFunds.addSelectDestinationLabel.label, "Bank Account")
        XCTAssertTrue(transferFunds.transferAmount.exists)

        transferFunds.transferAmount.tap()
        transferFunds.transferAmount.clearAmountFieldAndEnterText(text: ".12345")

        transferFunds.transferSectionLabel.tap()
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "123.45")

        transferFunds.transferAmount.clearAndEnterText(text: "123456789012")
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "1,234,567,890.12")
        transferFunds.transferAmount.typeText("1234.56")
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "1,234,567,890.12")

        transferFunds.transferSectionLabel.tap()
        XCTAssertEqual(transferFunds.transferAmount.value as? String, "1,234,567,890.12")
    }

    // MARK: Select Destination Page
    func testTransferFunds_selectDestination() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)
        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

        transferFunds.verifyBankAccountDestination(type: TransferMethods.bankAccount, endingDigit: "1234")
        transferFunds.addSelectDestinationLabel.tap()

        let usdBankAccount = app.tables.element.children(matching: .cell).element(boundBy: 0)
        let cadBankAccount = app.tables.element.children(matching: .cell).element(boundBy: 1)
        let prepaidCard = app.tables.element.children(matching: .cell).element(boundBy: 2)

        XCTAssertTrue(selectDestination.selectDestinationTitle.exists)
        XCTAssertTrue(selectDestination.addTransferMethodButton.exists)

        waitForNonExistence(spinner)

        XCTAssertEqual(selectDestination.getSelectDestinationRowTitle(index: 0), TransferMethods.bankAccount)
        XCTAssertEqual(selectDestination.getSelectDestinationRowDetail(index: 0), expectedUSDestinationLabel + "1234")

        XCTAssertEqual(selectDestination.getSelectDestinationRowTitle(index: 1), TransferMethods.bankAccount)
        XCTAssertEqual(selectDestination.getSelectDestinationRowDetail(index: 1), expectedCanadaDestinationLabel)

        XCTAssertEqual(selectDestination.getSelectDestinationRowTitle(index: 2), TransferMethods.prepaidCard)
        XCTAssertEqual(selectDestination.getSelectDestinationRowDetail(index: 2),
                       expectedUSDestinationPrepaidLabel + "4281")

        // Assert first row is checked by default
        assertButtonTrue(element: usdBankAccount)
        assertButtonFalse(element: cadBankAccount)
        assertButtonFalse(element: prepaidCard)

        // Assert can go back to previous page
        // selectDestination.clickBackButton()
        clickBackButton()
        transferFunds.verifyTransferFundsTitle()
    }

    func testTransferFunds_currencyFormatting() {
        mockServer.setupStub(url: "/rest/v3/users/usr-token/transfer-methods",
                             filename: "ListMoreThanOneTransferMethod",
                             method: HTTPMethod.get)
        mockServer.setupStub(url: "/rest/v3/transfers",
                             filename: "AvailableFundUSD",
                             method: HTTPMethod.post)

        XCTAssertTrue(transferFundMenu.exists)
        transferFundMenu.tap()
        waitForNonExistence(spinner)

